<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.serviceyou.ui.ui.home.HomeViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:padding="@dimen/_6sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/action_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:contentDescription="@string/profile_image"
                    android:src="@drawable/ic_profile" />

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:layout_marginLeft="@dimen/_6sdp"
                    android:layout_toEndOf="@+id/action_image"
                    android:layout_toRightOf="@+id/action_image"
                    android:text="@string/morning_roxie"
                    android:textColor="@color/colorPrimaryDark" />

                <ImageView
                    android:id="@+id/iv_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@string/menu"
                    android:onClick="@{() -> viewModel.onMenuClick()}"
                    android:src="@drawable/ic_menu" />
            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:layout_marginTop="@dimen/_6sdp"
            android:background="@drawable/background_home">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:orientation="vertical"
                android:weightSum="1">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.31">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|top"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginLeft="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:contentDescription="@string/dummy_image"
                        android:src="@drawable/ic_dummy" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.11"
                    android:background="@color/transparent_black"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_intro_msg1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|bottom"
                        android:paddingTop="@dimen/_8sdp"
                        android:text="@string/your_health_is_our_concern"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_17ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_intro_msg2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:gravity="center|top"
                        android:paddingBottom="@dimen/_8sdp"
                        android:text="@string/dummy_text"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_10ssp" />
                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.58">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_items"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent_black"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        bind:setUpHomeDataAdapter="@{viewModel.homeMutableLiveData}" />

                </FrameLayout>
            </LinearLayout>
        </FrameLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/float_btn_down"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:background="@drawable/fab_icon"
            android:contentDescription="@string/floating_button"
            android:scaleType="fitXY" />
    </RelativeLayout>
</layout>