<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="homeViewModel"
            type="com.example.serviceyou.ui.ui.home.HomeViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <RelativeLayout
            android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_scan_devices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/scan_nearby_ble_devices"
                android:onClick="@{(v) -> homeViewModel.onBleScan(v)}"
                android:padding="@dimen/_8sdp"
                android:text="@string/scan_nearby_ble_devices"
                android:textColor="@android:color/white" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_ble_devices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_scan_devices"
                android:layout_margin="@dimen/_5sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                bind:setUpBleDevicesListAdapter="@{homeViewModel.scannedDevicesLiveData}" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_download"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rv_ble_devices"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/download_sample_text_file"
                android:onClick="@{(v) -> homeViewModel.onAddDownloadFileClick(v)}"
                android:padding="@dimen/_8sdp"
                android:text="@string/download_sample_text_file"
                android:textColor="@android:color/white" />

            <!--      <TextView
                      android:id="@+id/tv_bluetooth_heading"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:background="@color/colorPrimaryDark"
                      android:gravity="center"
                      android:padding="@dimen/_8sdp"
                      android:text="@string/bluetooth_devices_found"
                      android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                      android:textColor="@android:color/white"
                      android:visibility="gone"
                      android:textStyle="bold" />-->


            <TextView
                android:id="@+id/tv_file_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_download"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@{homeViewModel.fileData}"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_frequency_calculator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_file_data"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/download_sample_text_file"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@string/calculate_word_frequency"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tv_word_count"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/tv_frequency_calculator"
                android:gravity="fill_vertical"
                android:padding="@dimen/_8sdp"
                android:text="@{homeViewModel.wordFrequency}"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@android:color/black" />

        </RelativeLayout>

    </ScrollView>
</layout>
